grammar.bnf
<program> ::= <statement_list>

<statement_list> ::= <statement> | <statement> <statement_list>

<statement> ::= <assignment> | <output_statement> | <if_statement> | <loop_statement>

<assignment> ::= "make" <variable> "get" <expression>

<variable> ::= <identifier>

<identifier> ::= <letter> (<letter> | <digit>)*

<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"

<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<expression> ::= <term> | <expression> "add" <term> | <expression> "minus" <term>

<term> ::= <factor> | <term> "times" <factor> | <term> "divide" <factor>

<factor> ::= <number> | <variable> | "(" <expression> ")"

<number> ::= <digit>+ ("." <digit>+)?

<output_statement> ::= "shout" "(" <expression> ")"

<if_statement> ::= "if to say" "(" <condition> ")" <block> ("if not so" <block>)?

<loop_statement> ::= "jasi" "(" <condition> ")" <block>

<condition> ::= <expression> "na" <expression> | <expression> "pass" <expression> | <expression> "small pass" <expression>

<block> ::= "start" <statement_list> "end"
